<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentation.auth.login.LoginFragment">


    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/filmes_tmbd_jorge"
        android:textColor="@color/red" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/light_gray"
        app:boxStrokeColor="@color/roxo"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="25dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/light_gray"
        app:boxStrokeColor="@color/roxo"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="25dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/margin_20dp"
        android:background="@drawable/shape_buttom_login"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_precisa_ajuda"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/precisa_de_ajuda"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_novo_cadastro"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/novo_por_aqui_inscreva_se_agora"
        android:textColor="@color/white" />


</LinearLayout>