<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.auth.register.RegisterFragment">


    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="50dp"
        android:text="@string/tudo_pronto_para_assistir"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20dp"
        android:text="@string/informe_seu_email_para_criar_ou_acessar_sua_conta"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_margin="@dimen/margin_20dp"
        android:hint="@string/e_mail"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cadastrar_email"
        android:layout_margin="@dimen/margin_20dp"
        android:padding="@dimen/margin_20dp"
        android:backgroundTint="@color/red"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vamos Lá" />


</LinearLayout>